fixed a minor hiccup with project divs overlaping

--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -163,7 +163,7 @@
     }
 }
 
-@media (max-width: 730px) {
+@media (max-width: 735px) {
     .about h3, .skillset h3, .portfolio h3, .contactInfo .contactHeadings h3 {
         font-size: 5rem;
     }
@@ -284,6 +284,12 @@
         width: 60%;
         font-size: 1rem;
         text-align: center;
+    }
+    .portfolio .gallery .projectContent .projectText {
+        margin-left: 0px;
+    }
+    .portfolio .gallery .projectContent {
+        margin: 80px 0px
     }
     .menuToggle {
         top: 15px;
