--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1283,7 +1283,7 @@ footer p {
   }
 }
 
-@media (max-width: 730px) {
+@media (max-width: 735px) {
   .about h3, .skillset h3, .portfolio h3, .contactInfo .contactHeadings h3 {
     font-size: 5rem;
   }
@@ -1419,6 +1419,12 @@ footer p {
     width: 60%;
     font-size: 1rem;
     text-align: center;
+  }
+  .portfolio .gallery .projectContent .projectText {
+    margin-left: 0px;
+  }
+  .portfolio .gallery .projectContent {
+    margin: 80px 0px;
   }
   .menuToggle {
     top: 15px;
